removed useless webkits in attempt to fix display on iphones

--- a/src/App.css
+++ b/src/App.css
@@ -11,48 +11,34 @@ body {
 .App {
     text-align: center;
     width: 100%;
-    display: -webkit-box;
-    display: -ms-flexbox;
+    display:-webkit-flex;
     display: flex;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
+    -webkit-align-items: center;
     align-items: center;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
+    -webkit-justify-content: center;
     justify-content: center;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
+    -webkit-flex-direction: column;
     flex-direction: column;
     background-color: rgb(24, 24, 26);
 }
 
 .buttonAndMonthNameContainer {
     width: 100%;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
+    display: -webkit-flex;
+    display:flex;
+    -webkit-justify-content: center;
+    -webkit-align-items: center;
+    -webkit-flex-direction: column;
     flex-direction: column;
 }
 
 .monthContainer {
     width: 100%;
-    display: -webkit-box;
-    display: -ms-flexbox;
+    display: -webkit-flex;
     display: flex;
-    -webkit-box-pack: justify;
-    -ms-flex-pack: justify;
+    -webkit-justify-content: space-between;
     justify-content: space-between;
-    -ms-flex-wrap: wrap;
+    -webkit-flex-wrap: wrap;
     flex-wrap: wrap;
     margin-top:2%;
 }
@@ -61,11 +47,11 @@ body {
     width: 140px;
     height: 193px;
     border: 1px solid black;
-    display: -webkit-box;
-    display: -ms-flexbox;
+    display: -webkit-flex;
     display: flex;
     color: white;
     background-color: #303030;
+    -webkit-align-items: flex-start;
     align-items: flex-start;
     background-repeat: no-repeat;
     background-size: 100% 100%;
@@ -79,29 +65,24 @@ body {
     width: 14%;
     height: 95%;
     padding: 0;
-    display: -webkit-box;
-    display: -ms-flexbox;
+    display: -webkit-flex;
     display: flex;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
     align-items: center;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
+    -webkit-align-items: center;
+    -webkit-justify-content: center;
     justify-content: center;
+    -webkit-flex-direction: column;
     flex-direction: column;
 }
 
 .currentlySelectedMonth {
     width: 150px;
     height: 45px;
-    display: -webkit-box;
-    display: -ms-flexbox;
+    display: -webkit-flex;
     display: flex;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
+    -webkit-align-items: center;
     align-items: center;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
+    -webkit-justify-content: center;
     justify-content: center;
     font-family: 'Titillium Web', sans-serif;
     font-size: 2em;
@@ -136,12 +117,12 @@ body {
 }
 
 .movieInfoContainer {
-    display: -webkit-box;
-    display: -ms-flexbox;
+    display: -webkit-flex;
     display: flex;
     width: 100%;
     font-size: 20px;
     font-family: 'Libre Franklin', sans-serif;
+    -webkit-flex-direction: column;
     flex-direction: column;
     background-color: rgb(24, 24, 26);
     z-index: 1;
@@ -157,14 +138,11 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     background-position: 50% 50%;
-    display: -webkit-box;
-    display: -ms-flexbox;
+    display: -webkit-flex;
     display: flex;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
+    -webkit-align-items: center;
     align-items: center;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
+    -webkit-justify-content: center;
     justify-content: center;
     box-shadow: inset 0 0 0 1000px rgba(0, 0, 10, 0.7);
     border-bottom: 4px solid white;
@@ -198,14 +176,11 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     background-position: 50% 50%;
-    display: -webkit-box;
-    display: -ms-flexbox;
+    display: -webkit-flex;
     display: flex;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
+    -webkit-align-items: center;
     align-items: center;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
+    -webkit-justify-content: center;
     justify-content: center;
     box-shadow: inset 0 0 0 1000px rgba(0, 0, 10, 0.6);
 }
@@ -241,29 +216,26 @@ body {
 }
 
 .descriptionContainer {
-    display: -webkit-box;
-    display: -ms-flexbox;
+    display: -webkit-flex;
     display: flex;
+    -webkit-flex-direction: column;
     flex-direction: column;
+    -webkit-align-items: flex-start;
     align-items: flex-start;
     margin: 2%;
 }
 
 #directedBy {
-    display: -webkit-box;
-    display: -ms-flexbox;
+    display: -webkit-flex;
     display: flex;
 }
 
 .buttonMonthContainer {
-    display: -webkit-box;
-    display: -ms-flexbox;
+    display: -webkit-flex;
     display: flex;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
+    -webkit-align-items: center;
     align-items: center;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
+    -webkit-justify-content: center;
     justify-content: center;
     margin-top:3%;
 }
@@ -290,16 +262,14 @@ body {
 }
 
 .overview {
-    display: -webkit-box;
-    display: -ms-flexbox;
+    display: -webkit-flex;
     display: flex;
     text-align: left;
     margin: 0 0 0 0;
 }
 
 #starring {
-    display: -webkit-box;
-    display: -ms-flexbox;
+    display: -webkit-flex;
     display: flex;
 }
 
@@ -367,6 +337,7 @@ body {
     }
 
     .movieDescPosterContainer {
+        -webkit-flex-direction: column;
         flex-direction: column;
     }
 
